--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "chat app",
+  "main": "webpack.config.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
@@ -13,19 +13,37 @@
     "type": "git",
     "url": "git+https://github.com/spandana9318/chat-app.git"
   },
-  "author": "",
+  "keywords": [
+    "first",
+    "node",
+    "app"
+  ],
+  "author": "spandana",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/spandana9318/chat-app/issues"
   },
   "homepage": "https://github.com/spandana9318/chat-app#readme",
   "dependencies": {
+    "assert": "^2.1.0",
     "bad-words": "^3.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "socket.io": "^4.8.1",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
+    "util": "^0.12.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "babel-loader": "^9.2.1",
+    "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
 }
