--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "util": "^0.12.5"
